--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/weschang15/keyvanish#readme",
   "dependencies": {
     "argon2": "^0.27.1",
+    "cors": "^2.8.5",
     "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "mongoose": "^5.11.15"
   }
 }
