--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "NODE_ENV=production node -r dotenv/config server",
+    "dev": "nodemon -r dotenv/config server"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,8 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "mongoose": "^5.11.15"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
