--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
