--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production node -r dotenv/config server",
-    "dev": "nodemon -r dotenv/config server"
+    "dev:server": "nodemon -r dotenv/config server",
+    "dev:worker": "nodemon -r dotenv/config worker"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/weschang15/keyvanish#readme",
   "dependencies": {
+    "agenda": "^4.0.1",
     "argon2": "^0.27.1",
     "cors": "^2.8.5",
     "cryptr": "^6.0.2",
