--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "helmet": "^4.4.1",
     "mongoose": "^5.11.17",
     "uuid": "^8.3.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
