--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   },
   "homepage": "https://github.com/weschang15/keyvanish#readme",
   "dependencies": {
-    "agenda": "^4.0.1",
     "argon2": "^0.27.1",
+    "bull": "^3.20.1",
     "cors": "^2.8.5",
     "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "mongoose": "^5.11.17",
+    "ioredis": "^4.23.0",
+    "mongoose": "^5.11.19",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "yup": "^0.32.9"
