--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6",
     "helmet": "^4.4.1",
     "ioredis": "^4.23.0",
     "mongoose": "^5.11.19",
