--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "helmet": "^4.4.1",
     "ioredis": "^4.23.0",
     "mongoose": "^5.11.19",
+    "rate-limit-redis": "^2.1.0",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "yup": "^0.32.9"
